variable problem size for solve-rand